Functional user input

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <form id="speedForm">
+    <form id="speedForm" autocomplete="off">
         <input id="speedVal" type="text" name="speed">
     </form>
     <div align="center">
