Added donate button and stuttering fix tip and reduced permission requirements.

--- a/popup.html
+++ b/popup.html
@@ -10,12 +10,15 @@
     </style>
   </head>
   <body>
+    Stuttering? Hit pause and play.
     <form id="speedForm" autocomplete="off">
-        <input id="speedVal" type="text" name="speed">
+        <input id="speedVal" type="text" name="speed" value="1.0">
     </form>
     <div align="center">
         <button type="button" id="changeSpeed">Set speed</button>
     </div>
+    <a href="https://paypal.me/rellikolbaid">Donate</a>
+
     <script src="popup.js"></script>
   </body>
 </html>
