couple minor things

--- a/popup.html
+++ b/popup.html
@@ -4,12 +4,13 @@
     <style>
       body {
         width: 150px;
-        height: 100px;
+        height: 90px;
       }
       #title {
         text-align: center;
         color: #e8e3d3;
         background-color: #4b2e83;
+        margin-bottom: 5px;
       }
       #input {
         width: 150px;
@@ -21,6 +22,7 @@
       }
       #dlButtonLeft {
         font-size: 10px;
+        width: 100px;
       }
       #dlButtonRight {
         font-size: 10px;
