--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
     <style>
       body {
         width: 150px;
-        height: 90px;
+        height: 100px;
       }
       #title {
         text-align: center;
@@ -62,14 +62,19 @@
     <div id="downloads">
       Download video:
       <div id="dlButtons">
-        <button type="button" id="dlButtonLeft">Download left</button>
+        <button type="button" id="dlButtonLeft">Save as...</button>
         <!--
         <button type="button" id="dlButtonRight">Download right</button> 
         -->
       </div>
     </div>
     <div id=donateUrl>
-        <a href="https://paypal.me/rellikolbaid" target="_blank">Donate</a>
+      <form action="https://www.paypal.com/cgi-bin/webscr" target="_blank" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_s-xclick" />
+        <input type="hidden" name="hosted_button_id" value="88KHQXCNJ7BXN" />
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+        <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+        </form>
     </div>
     <img id="husky" src="/images/husky.png">
 
