--- a/popup.html
+++ b/popup.html
@@ -1,56 +1,55 @@
 <!DOCTYPE html>
+<style>
+  body {
+    margin: 3px;
+    width: 150px;
+    height: 105px;
+  }
+  #title {
+    text-align: center;
+    color: #e8e3d3;
+    background-color: #4b2e83;
+    margin-bottom: 5px;
+  }
+  #input {
+    width: 150px;
+  }
+  button {
+    height: 20px;
+    width: 100px;
+    outline: none;
+  }
+  #dlButtonLeft {
+    font-size: 10px;
+    width: 100px;
+  }
+  #dlButtonRight {
+    font-size: 10px;
+  }
+  #speedValField {
+    width: 40px;
+    float:left;
+  }
+  #downloads {
+    position: absolute;
+  }
+  #donateUrl {
+    position: absolute;
+    bottom: 0;
+  }
+  #husky {
+    width: 50px;
+    height: 50px;
+    position:absolute;
+    bottom:0;
+    right:0;
+  }
+</style>
 <html>
-  <head>
-    <style>
-      body {
-        width: 150px;
-        height: 100px;
-      }
-      #title {
-        text-align: center;
-        color: #e8e3d3;
-        background-color: #4b2e83;
-        margin-bottom: 5px;
-      }
-      #input {
-        width: 150px;
-      }
-      button {
-        height: 20px;
-        width: 100px;
-        outline: none;
-      }
-      #dlButtonLeft {
-        font-size: 10px;
-        width: 100px;
-      }
-      #dlButtonRight {
-        font-size: 10px;
-      }
-      #speedValField {
-        width: 40px;
-        float:left;
-      }
-      #downloads {
-        position: absolute;
-      }
-      #donateUrl {
-        position: absolute;
-        bottom: 0;
-      }
-      #husky {
-        width: 50px;
-        height: 50px;
-        position:absolute;
-        bottom:0;
-        right:0;
-      }
-    </style>
-  </head>
+  <div id="title">
+      Fast Panopto v1.21
+  </div>
   <body>
-    <div id="title">
-        Fast Panopto v1.20
-    </div>
     <div id="input">
       <div id="inputFields">
         <input id="speedValField" type="number" name="speed" value="1" step="0.1">
