button style change

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
   body {
     margin: 3px;
     width: 150px;
-    height: 105px;
+    height: 108px;
   }
   #title {
     text-align: center;
@@ -18,13 +18,13 @@
     height: 20px;
     width: 100px;
     outline: none;
-  }
-  #dlButtonLeft {
-    font-size: 10px;
-    width: 100px;
-  }
-  #dlButtonRight {
-    font-size: 10px;
+    border-width: 0;
+    border-radius: 2px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+    background-color: #f5f5f5;
+    color: #000000;
+
+    transition: background-color .3s;
   }
   #speedValField {
     width: 40px;
