--- a/source/popup.html
+++ b/source/popup.html
@@ -2,6 +2,12 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>faster-panopto</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link
+		href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap"
+		rel="stylesheet"
+	/>
 </head>
 <html>
 	<body>
